# aida

./: Cargo.toml
agent/: Cargo.toml  build.rs
agent/src/: descriptor.rs  lib.rs
configs/: hello_world.toml
shared/: Cargo.toml
shared/src/: class.rs  descriptor.rs  lib.rs
src/: lib.rs
ui/: Cargo.toml
ui/src/: config.rs  main.rs
